# BaseFramework

./: build.gradle  dependencies.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/xiaosw/framework/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/xiaosw/framework/: App.java  MainActivity.kt
app/src/main/java/com/xiaosw/framework/activity/: CameraActivity.java  MainActivity.java  TitleBarActivity.java
app/src/main/java/com/xiaosw/framework/activity/view/: IMainView.java
app/src/main/java/com/xiaosw/framework/config/: AppConfig.java
app/src/main/java/com/xiaosw/framework/http/: RequestApiService.java
app/src/main/java/com/xiaosw/framework/model/: BaseModel.java  IMainModel.java
app/src/main/java/com/xiaosw/framework/model/bean/: AppH5UrlValue.java  BaseParams.java
app/src/main/java/com/xiaosw/framework/model/impl/: MainModelImpl.java
app/src/main/java/com/xiaosw/framework/presenter/: MainPresenter.java
app/src/main/java/com/xiaosw/framework/widget/dialog/: DateWheelDialog.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_title_bar.xml  dialog_date_wheel.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/xiaosw/framework/: ExampleUnitTest.kt
common/: build.gradle
common/src/androidTest/java/com/xiaosw/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/main/java/com/xiaosw/common/helper/: FormCheckHelper.java  MPermissionHelper.java
common/src/main/java/com/xiaosw/common/helper/proxy/: PermissionProxy.java
common/src/main/java/com/xiaosw/common/manager/: GlobalManager.kt
common/src/main/java/com/xiaosw/common/util/: AndroidContext.kt  DeviceUtils.kt  GsonUtils.kt  LogUtil.java  LogUtil.kt  NetworkStatusHelper.kt  ScreenUtils.java  StringUtils.kt
common/src/test/java/com/xiaosw/common/: ExampleUnitTest.java
core/: .gitignore  build.gradle
core/src/androidTest/java/com/xiaosw/core/: ExampleInstrumentedTest.java
core/src/main/: AndroidManifest.xml
core/src/main/java/com/xiaosw/core/: BaseApplication.java
core/src/main/java/com/xiaosw/core/activity/: BaseActivity.java
core/src/main/java/com/xiaosw/core/activity/fragment/: BaseFragment.java
core/src/main/java/com/xiaosw/core/activity/view/: IView.kt
core/src/main/java/com/xiaosw/core/aop/: AopJoinPoint.java  AspectHandler.java
core/src/main/java/com/xiaosw/core/aop/annotation/: AutoLog.java
core/src/main/java/com/xiaosw/core/camera/: BaseCamera.java  MaskView.java  SimpleCamera.java
core/src/main/java/com/xiaosw/core/http/: HttpConfig.kt  Result.kt  ServiceFactory.kt  SimpleObserver.kt
core/src/main/java/com/xiaosw/core/model/: IModel.kt
core/src/main/java/com/xiaosw/core/presenter/: BasePrecenter.kt
core/src/main/java/com/xiaosw/core/widget/: UniversalBaseAdapter.kt  ViewHolder.kt
core/src/main/res/anim/: date_wheel_exit.xml
core/src/main/res/layout/: item_wheel_date.xml
core/src/main/res/values/: attrs.xml  strings.xml  wheel_styles.xml
core/src/test/java/com/xiaosw/core/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
permission-annotation/src/main/java/com/xiaosw/permission.annotation/: PermissionDenied.java  PermissionGrant.java  ShowRequestPermissionRationale.java
permission-compiler/: build.gradle
permission-compiler/src/main/java/com/xiaosw/permission/compiler/: ClassInfo.java  PermissionProcessor.java
(+13 files in other folders)
